# KMCP

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SCAFFOLD.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
docs/: AWS_DEPLOYMENT.md  AWS_DEPLOYMENT_GUIDE.md  DEPLOYMENT_RUNBOOK.md  KnowledgeMCP_Architecture.md  PROMPT_2_Implementation.md
frontend/: Dockerfile  LICENSE  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
infra/: samconfig.toml  template.yaml
scripts/: deploy.sh  migrate_legacy_source_secrets.py  seed_demo.py  test_mcp_endpoint.py
src/admin/: auth.py  handler.py  routes.py
src/analytics/: logger.py  reporter.py
src/common/: aws_clients.py  config.py  dynamodb.py  models.py  source_secrets.py  tokenizer.py
src/crawler/: code_extractor.py  file_processor.py  git_connector.py  handler.py  html_to_markdown.py  metadata_extractor.py  page_fetcher.py  s3_connector.py  sitemap_parser.py  text_ingestor.py  wiki_connector.py
src/indexer/: chunker.py  code_indexer.py  embedder.py  handler.py  html_to_markdown.py  opensearch_client.py
src/mcp_server/: handler.py  server.py  (+4 more)
tests/: conftest.py  test_admin_routes.py  test_auth.py  test_chunker.py  test_crawler.py  test_local_backends.py  test_local_e2e.py  test_models.py  test_retrieval.py  test_scheduler.py  test_source_secrets.py
(+38 files in other folders)
