[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledgemcp"
version = "0.1.0"
description = "Give your docs an MCP endpoint. Every AI agent can use them."
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "boto3>=1.34.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.2.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.0",
    "markdownify>=0.13.0",
    "tiktoken>=0.7.0",
    "requests-aws4auth>=1.2.3",
    "PyMuPDF>=1.24.0",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "opensearch-py>=2.4.0",
    "azure-storage-blob>=12.22.0",
    "google-cloud-storage>=2.18.0",
    "uvicorn>=0.30.0",
    "starlette>=0.38.0",
    "mangum>=0.17.0",
]

[project.optional-dependencies]
local = [
    "fastembed>=0.3.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "moto[dynamodb,s3,sqs]>=5.0.0",
    "fastembed>=0.3.0",
    "httpx[http2]>=0.27.0",
]
